@@ -5,6 +5,7 @@ suil (0.8.3) unstable;
   * Various Windows fixes (patches from Robin Gareus)
   * Center X11 UIs in Gtk (patch from Robin Gareus)
   * Fix initial size of resizable X11 UIs in Gtk (patch from Robin Gareus)
+  * Bubble X11 key events up to Gtk parent (patch from Filipe Coelho)
   * Add Gtk2 and X11 in Qt5 wrappers (patch from Rui Nuno Capela)
   * Fix compilation with -Wl,--no-undefined
   * Fix a few minor/unlikely memory errors
@@ -12,7 +13,7 @@ suil (0.8.3) unstable;
   * Only report suil_ui_supported() if necessary wrapper is compiled in
   * Upgrade to waf 1.8.14
 
- -- David Robillard <d@drobilla.net>  Sat, 28 Nov 2015 15:26:47 -0500
+ -- David Robillard <d@drobilla.net>  Sat, 28 Nov 2015 17:50:49 -0500
 
 suil (0.8.2) stable;
 
